src/objects/Initial_Assessment_Form__c.object
<CustomObject>
    <fields>
        <fullName>AUDIT_Score__c</fullName>
        <formula>VALUE(Alcohol_Use_Q1__c) + VALUE(Alcohol_Use_Q2__c) + VALUE(Alcohol_Use_Q3__c) + VALUE(Alcohol_Use_Q4__c) + VALUE(Alcohol_Use_Q5__c) + VALUE(Alcohol_Use_Q6__c) + VALUE(Alcohol_Use_Q7__c) + VALUE(Alcohol_Use_Q8__c) + VALUE(Alcohol_Use_Q9__c) + VALUE(Alcohol_Use_Q10__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUDIT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>IF(LEN(Client__r.MailingStreet) &gt;1, Client__r.MailingStreet&amp; BR() , &quot;&quot;)&amp;
IF(LEN( Client__r.MailingCity ) &gt;1, Client__r.MailingCity &amp; BR() , &quot;&quot;)&amp;
IF(LEN( Client__r.MailingState ) &gt;1, Client__r.MailingState , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Client__r.eCASS02t1__Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_first_injected_Not_known__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age first injected Not known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_first_injected__c</fullName>
        <inlineHelpText>What age were you when you first injected (if applicable)</inlineHelpText>
        <label>Age first injected</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_first_use_any_drug__c</fullName>
        <inlineHelpText>What age were you when you first used:</inlineHelpText>
        <label>Age first use any drug</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_first_use_1__c</fullName>
        <label>Age of first use 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_first_use_2__c</fullName>
        <label>Age of first use 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_first_use_3__c</fullName>
        <label>Age of first use 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_service_1_was_person_referred_to__c</fullName>
        <inlineHelpText>If ‘yes’ to above to which agency(ies)/ service(s) was person referred to:</inlineHelpText>
        <label>Agency/ service 1 was person referred to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_service_2_was_person_referred_to__c</fullName>
        <inlineHelpText>If ‘yes’ to above to which agency(ies)/ service(s) was person referred to:</inlineHelpText>
        <label>Agency/ service 2 was person referred to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_service_3_was_person_referred_to__c</fullName>
        <inlineHelpText>If ‘yes’ to above to which agency(ies)/ service(s) was person referred to:</inlineHelpText>
        <label>Agency/ service 3 was person referred to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_Use_Q10__c</fullName>
        <formula>CASE(TEXT(X10_Relative_concerned_about_you__c),
&quot;(0) No&quot;,&quot;0&quot;, 
&quot;(2) Yes, but not in the last year&quot;,&quot;2&quot;, 
&quot;(4) Yes, during the last year&quot;,&quot;4&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alcohol Use Q10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_Use_Q1__c</fullName>
        <formula>CASE(TEXT(X1_How_often_do_you_drink_alcohol__c),
&quot;(0) Never (skip to Qs 9 – 10)&quot;,&quot;0&quot;,
&quot;(1) Monthly or less&quot;,&quot;1&quot;,
&quot;(2) 2 to 4 times a month&quot;,&quot;2&quot;,
&quot;(3) 2 to 3 times a week&quot;,&quot;3&quot;,
&quot;(4) 4 or more times a week&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alcohol Use Q1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_Use_Q2__c</fullName>
        <formula>CASE(TEXT(X2_How_many_drinks_per_occasion__c),
&quot;(0) 1 or 2&quot;,&quot;0&quot;,
&quot;(1) 3 or 4&quot;,&quot;1&quot;,
&quot;(2) 5 or 6&quot;,&quot;2&quot;,
&quot;(3) 7, 8, or 9&quot;,&quot;3&quot;,
&quot;(4) 10 or more&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alcohol Use Q2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_used_1__c</fullName>
        <label>Amount used 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_used_2__c</fullName>
        <label>Amount used 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_used_3__c</fullName>
        <label>Amount used 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_additional_information_Ongoing_care__c</fullName>
        <label>Any additional information Ongoing care</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_additional_information__c</fullName>
        <label>Any additional information:</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_additional_information_re_Drugs__c</fullName>
        <label>Any additional information re Drugs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_physical_access_requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have Do you have any physical access requirements/ physical disabilities?/ physical disabilities?</inlineHelpText>
        <label>Any physical access requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_problems_with_your_injection_sites__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you experienced any problems with your injection sites? Yes, No</inlineHelpText>
        <label>Any problems with your injection sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_pregnant__c</fullName>
        <label>Are you pregnant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_you_would_like_help_support_with_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Areas you would like help/support with 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Areas_you_would_like_help_support_with_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Areas you would like help/support with 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Areas_you_would_like_help_support_with_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Areas you would like help/support with 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_outcome__c</fullName>
        <label>Assessment outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuitable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Total_Score__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baby_due_date__c</fullName>
        <inlineHelpText>If pregnant please specify the date your bay is due</inlineHelpText>
        <label>Baby due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brief_history_of_possible_risk_behaviour__c</fullName>
        <inlineHelpText>Please obtain a brief history of possible risk behaviours:</inlineHelpText>
        <label>Brief history of possible risk behaviour</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_relevant_alcohol_case_history__c</fullName>
        <label>Brief relevant alcohol case history</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Centre_assessment_criteria_filled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Centre assessment criteria filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Client)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Concerns_about_your_mental_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you currently have any concerns about your mental health?</inlineHelpText>
        <label>Concerns about your mental health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concerns_about_your_physical_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you currently have any concerns about your physical health?</inlineHelpText>
        <label>Concerns about your physical health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_to_share_information_signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Consent to share information signed</description>
        <inlineHelpText>Has a ‘Consent to share information’ form been signed?</inlineHelpText>
        <label>Consent to share information signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_to_transfer_Initial_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Consent to transfer Initial Assessment</description>
        <inlineHelpText>If person is being referred for Comprehensive Assessment has consent to transfer Initial Assessment form to relevant agency/ service been signed?</inlineHelpText>
        <label>Consent to transfer Initial Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_details_phone_number_address__c</fullName>
        <inlineHelpText>Please identify services / workers you have been in contact with over the past year, including drug &amp; alcohol
services? (May include: addiction treatment service, housing / homeless services, GP, counsellor, social worker,
legal services)</inlineHelpText>
        <label>Contact details : phone number, address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_have_a_care_plan_substance_use__c</fullName>
        <inlineHelpText>Do you currently have a care plan to help you with your substance use?</inlineHelpText>
        <label>Currently have a care plan/substance use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_receiving_medical_treatment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you currently receiving medical treatment for any health condition?</inlineHelpText>
        <label>Currently receiving medical treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <formula>Client__r.Birthdate</formula>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUDIT_SCORE__c</fullName>
        <formula>VALUE(Drug_Use_Q1__c) + VALUE(Drug_Use_Q2__c) + VALUE(Drug_Use_Q3__c) + VALUE(Drug_Use_Q4__c) + VALUE(Drug_Use_Q5__c) + VALUE(Drug_Use_Q6__c) + VALUE(Drug_Use_Q7__c) + VALUE(Drug_Use_Q8__c) + VALUE(Drug_Use_Q9__c) + VALUE(Drug_Use_Q10__c) + VALUE(Drug_use_Q11__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUDIT SCORE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_assessment_criteria_filled__c</fullName>
        <label>Date assessment criteria filled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_initial_assessment__c</fullName>
        <label>Date of initial assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_know_Baby_due_date__c</fullName>
        <inlineHelpText>If yes, do you know which date your baby is due? (Please insert expected due date if known)</inlineHelpText>
        <label>Do you know Baby due date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_Liaison_Midwife_involved_Date__c</fullName>
        <label>Drug Liaison Midwife involved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drug_Liaison_Midwife_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Drug Liaison Midwife involved in your pregnancy care?</inlineHelpText>
        <label>Drug Liaison Midwife involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_Use_Q10__c</fullName>
        <formula>CASE(TEXT(X10_You_anyone_been_hurt_by_drug_use__c),
&quot;(0) No&quot;,&quot;0&quot;,
&quot;(1) Yes, but not over the past year&quot;,&quot;1&quot;,
&quot;(2) Yes, over the past year&quot;,&quot;2&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Use Q10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Use_Q1__c</fullName>
        <formula>CASE(TEXT(X1_How_often_do_you_use_drugs__c),
&quot;(0) Never&quot;,&quot;0&quot;,
&quot;(1) Once a month or less&quot;,&quot;1&quot;,
&quot;(2) 2-4 times a month&quot;,&quot;2&quot;,
&quot;(3) 2-3 times a week&quot;,&quot;3&quot;,
&quot;(4) 4 times a week or more often&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Use Q1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_type_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug type 1</label>
        <referenceTo>eCASS02t1__Drug_HRB__c</referenceTo>
        <relationshipLabel>Initial Assessment Forms</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug_type_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug type 2</label>
        <referenceTo>eCASS02t1__Drug_HRB__c</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Drug type 2)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug_type_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug type 3</label>
        <referenceTo>eCASS02t1__Drug_HRB__c</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Drug type 3)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drug_use_Q11__c</fullName>
        <formula>CASE(TEXT(X11_Anyone_been_worried_about_drug_use__c),
&quot;(0) No&quot;,&quot;0&quot;,
&quot;(1) Yes, but not over the past year&quot;,&quot;1&quot;,
&quot;(2) Yes, over the past year&quot;,&quot;2&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug use Q11</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnic_origin__c</fullName>
        <formula>TEXT(Client__r.eCASS02t1__X10b_Ethnic_Background__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ethnic origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_previously_treated_re_alcohol__c</fullName>
        <inlineHelpText>Have you ever previously been treated for problem alcohol use:</inlineHelpText>
        <label>Ever previously treated re alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Never treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_previously_treated_re_drug__c</fullName>
        <inlineHelpText>Have you ever previously been treated for problem drug use:</inlineHelpText>
        <label>Ever previously treated re drug</label>
        <picklist>
            <picklistValues>
                <fullName>Never treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experienced_any_ill_health_in_the_past__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you experienced any ill health in the past that required medical treatment?</inlineHelpText>
        <label>Experienced any ill health in the past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extent_of_drinking_problem__c</fullName>
        <inlineHelpText>Please categories the extent of drinking problem (as per tool):</inlineHelpText>
        <label>Extent of drinking problem</label>
        <picklist>
            <picklistValues>
                <fullName>No evidence of risky drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hazardous drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harmful drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependent drinker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_injecting_if_applicable__c</fullName>
        <label>Frequency of injecting (if applicable):</label>
        <picklist>
            <picklistValues>
                <fullName>Injected in the last 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injected in the last year but not in the last 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ever injected but not within the Last 12 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_sharing_equipment__c</fullName>
        <inlineHelpText>Frequency of sharing equipment (spoons, filters, stericups, mixing tools, sterile water, citric acid, tourniquet, swabs, sterifilters, snorting equipment.):</inlineHelpText>
        <label>Frequency of sharing equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Has shared in the last 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared equipment in the last 12 months but more than 30 days ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared equipment more than 12 months ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know/ don’t want to answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_sharing_needles_syringe__c</fullName>
        <inlineHelpText>Frequency of sharing needles &amp; syringes (if applicable)</inlineHelpText>
        <label>Frequency of sharing needles &amp; syringe</label>
        <picklist>
            <picklistValues>
                <fullName>Has shared in the last 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared needle or syringe in the last 12 months but more than 30 days ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared needles or more than 12 months ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know/ don’t want to answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Client__r.eCASS02t1__X4_Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_1_you_have_for_the_future__c</fullName>
        <inlineHelpText>Please identify any goals you have for the future (longer term).</inlineHelpText>
        <label>Goals 1 you have for the future</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_2_you_have_for_the_future__c</fullName>
        <inlineHelpText>Please identify any goals you have for the future (longer term).</inlineHelpText>
        <label>Goals 2 you have for the future</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_3_you_have_for_the_future__c</fullName>
        <inlineHelpText>Please identify any goals you have for the future (longer term).</inlineHelpText>
        <label>Goals 3 you have for the future</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harm_reduction_awareness_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Harm reduction awareness 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Harm_reduction_awareness_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Harm reduction awareness 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Harm_reduction_awareness_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Harm reduction awareness 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_overdosed_using_any_drug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you ever overdosed using any drug?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_of_injecting__c</fullName>
        <label>History of injecting</label>
        <picklist>
            <picklistValues>
                <fullName>Never injected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has injected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_sharing_needles_syringes__c</fullName>
        <inlineHelpText>History of sharing needles &amp; syringes</inlineHelpText>
        <label>History of sharing needles &amp; syringes</label>
        <picklist>
            <picklistValues>
                <fullName>Never shared needles &amp; syringes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_sharing_other_drug_using_equi__c</fullName>
        <inlineHelpText>History of sharing other drug using equipment (spoons, filters, stericups, mixing tools, sterile water, citric acid, tourniquet, swabs, sterifilters, snorting equipment.):</inlineHelpText>
        <label>History of sharing other drug using equi</label>
        <picklist>
            <picklistValues>
                <fullName>Never shared equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has shared equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_drinks_per_occasion_last_month__c</fullName>
        <inlineHelpText>How many drinks would you have consumed over a typical drinking session over the last month (If none put 0)</inlineHelpText>
        <label>How many drinks per occasion last month</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_used_1__c</fullName>
        <label>How often used 1</label>
        <picklist>
            <picklistValues>
                <fullName>1. Daily or almost daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Several times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. At least once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Less than once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_used_2__c</fullName>
        <label>How often used 2</label>
        <picklist>
            <picklistValues>
                <fullName>1. Daily or almost daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Several times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. At least once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Less than once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_used_3__c</fullName>
        <label>How often used 3</label>
        <picklist>
            <picklistValues>
                <fullName>1. Daily or almost daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Several times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. At least once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Less than once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_currently_injecting_which_sites_use__c</fullName>
        <inlineHelpText>If currently injecting, which sites do you use?</inlineHelpText>
        <label>If currently injecting, which sites use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_previously_treated_which_drugs__c</fullName>
        <inlineHelpText>If previously treated please state for which drug(s):</inlineHelpText>
        <label>If previously treated which drugs</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_received_opioid_specify_age__c</fullName>
        <inlineHelpText>If you previously received opioid replacement treatment, please specify age first received opioid substitution treatment:</inlineHelpText>
        <label>If received opioid, specify age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_Treatment_please_give_details__c</fullName>
        <inlineHelpText>Are you currently receiving medical treatment for any health condition? If yes, please give details:</inlineHelpText>
        <label>If yes (Treatment), please give details:</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_concerns_mental_health_specify__c</fullName>
        <inlineHelpText>Do you currently have any concerns about your mental health? If yes, please give details:</inlineHelpText>
        <label>If yes (concerns mental health) specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_ill_health_please_give_details__c</fullName>
        <inlineHelpText>Have you experienced any ill health in the past that required medical treatment? If yes, please give details:</inlineHelpText>
        <label>If yes (ill health), please give details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_mental_health_in_past_specify__c</fullName>
        <inlineHelpText>Have you received help for mental health difficulties in the past? If yes, please give details:</inlineHelpText>
        <label>If yes (mental health in past) specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_mental_health_please_specify__c</fullName>
        <label>If yes (mental health), please specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_overdosed_please_specify__c</fullName>
        <inlineHelpText>If yes, please state what happened and when it happened:</inlineHelpText>
        <label>If yes (overdosed) please specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_physical_disabilities_specify__c</fullName>
        <inlineHelpText>Do you have any physical access requirements/ physical disabilities?, please give details</inlineHelpText>
        <label>If yes (physical disabilities) specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_physical_health_please_details__c</fullName>
        <inlineHelpText>Do you currently have any concerns about your physical health? If yes, please give details:</inlineHelpText>
        <label>If yes (physical health), please details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_to_injecting_problems_specify__c</fullName>
        <inlineHelpText>Have you experienced any problems with your injection sites? 
If ‘yes’ to above please elaborate.</inlineHelpText>
        <label>If yes to injecting problems, specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interventions_carried_out_advice_given_1__c</fullName>
        <inlineHelpText>Please outline any other interventions carried out or advice/ information given:</inlineHelpText>
        <label>Interventions carried out/advice given 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interventions_carried_out_advice_given_2__c</fullName>
        <inlineHelpText>Please outline any other interventions carried out or advice/ information given:</inlineHelpText>
        <label>Interventions carried out/advice given 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interventions_carried_out_advice_given_3__c</fullName>
        <inlineHelpText>Please outline any other interventions carried out or advice/ information given:</inlineHelpText>
        <label>Interventions carried out/advice given 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>